--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,7 +40,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout repository
-      uses: actions/checkout@v2-
+      uses: actions/checkout@v2
     - name: Setup Docker buildx
       timeout-minutes: 4
       uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
