--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
-        "experimentalDecorators": true,
-        "emitDecoratorMetadata": true,
-        "removeComments": false,
-        "resolveJsonModule": true,
+        "experimentalDecorators": false,
+        "emitDecoratorMetadata": false,
+        "removeComments": true,
+        "resolveJsonModule": false,
         "declaration": true,
         "lib": ["es2020"],
         "target": "ES2020",                                /* Specify ECMAScript target version: 'ES3' (default), 'ES5', 'ES2015', 'ES2016', 'ES2017', 'ES2018', 'ES2019', 'ES2020', or 'ESNEXT'. */
