--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -206,7 +206,13 @@ jobs:
     - uses: actions/setup-node@v2
       with:
         node-version: '17'
-        cache: 'npm'
+    - name: NPM Cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
     - name: NPM install
       run: npm ci
     - name: Download Container TAR
