fixes for redis cluster

--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build": "node_modules/typescript/bin/tsc --project ./ && cp src/config/*.json build/src/config/",
     "docker:build": "docker build -t ghcr.io/bryopsida/hermes-mono:local .",
     "docker:push": "docker push ghcr.io/bryopsida/hermes-mono:local",
-    "start": "node build/src/monoApp.js",
-    "start:dev": "nodemon",
+    "start": "NODE_CONFIG_DIR=./build/src/config node build/src/monoApp.js",
+    "start:dev": "NODE_CONFIG_DIR=./src/config nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
     "stop:services": "docker-compose -f docker-compose.yml down",
     "lint": "eslint --ext .ts src/",
