--- a/helm/hermes/templates/ingress.yaml
+++ b/helm/hermes/templates/ingress.yaml
@@ -22,6 +22,9 @@ metadata:
   annotations:
     {{- toYaml . | nindent 4 }}
   {{- end }}
+  {{- if .Values.certmanager.enabled }}
+    cert-manager.io/cluster-issuer: {{ .Release.Name }}-cluster-issuer
+  {{- end }}
 spec:
   {{- if and .Values.ingress.className (semverCompare ">=1.18-0" .Capabilities.KubeVersion.GitVersion) }}
   ingressClassName: {{ .Values.ingress.className }}
@@ -33,7 +36,11 @@ spec:
         {{- range .hosts }}
         - {{ . | quote }}
         {{- end }}
+      {{- if $.Values.certmanager.enabled }}
+      secretName: {{ $.Release.Name }}-cm-tls
+      {{- else if .secretName }}
       secretName: {{ .secretName }}
+      {{- end }}
     {{- end }}
   {{- end }}
   rules:
