--- a/helm/hermes/envs/dev.yaml
+++ b/helm/hermes/envs/dev.yaml
@@ -1,4 +1,14 @@
 imagePullPolicy: Always
+ingress:
+  hosts:
+    - host: dev.hermes.local
+      paths:
+        - path: /
+          pathType: ImplementationSpecific
+  tls: 
+    - secretName: hermes-tls
+      hosts:
+        - dev.hermes.local
 kafka:
   replicaCount: 1
   defaultReplicationFactor: 1
@@ -30,4 +40,13 @@ redis:
   redis:
     nodeSelector:
       kubernetes.io/arch: amd64
-  
+certmanager:
+  cainjector:
+    nodeSelector:
+      kubernetes.io/arch: amd64
+  webhook:
+    nodeSelector:
+      kubernetes.io/arch: amd64
+  controller:
+    nodeSelector:
+      kubernetes.io/arch: amd64
