--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "lint:fix": "eslint --ext .ts src/ --fix",
     "k8s:createPullSecret": "kubectl --namespace $npm_config_helm_namespace create secret docker-registry ghcr-credentials  --docker-server=ghcr.io --docker-username=$npm_config_registry_username --docker-password=$npm_config_registry_password",
     "k8s:createNamespace": "kubectl create namespace $npm_config_helm_namespace",
+    "helm:addRepos": "helm repo add jetstack https://charts.jetstack.io",
+    "helm:updateRepos": "helm repo update",
+    "helm:deployCertManager": "helm upgrade --install --namespace cert-manager --create-namespace cert-manager jetstack/cert-manager --set installCRDs=true --debug --wait",
     "helm:deploy": "helm --namespace $npm_config_helm_namespace upgrade --install hermes ./helm/hermes --debug --wait $npm_config_helm_args",
     "helm:test": "helm test hermes",
     "helm:delete": "helm delete hermes",
