--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -273,7 +273,7 @@ jobs:
       run: npm run helm:test
     - name: Trust Deployment Self Signed Certificate
       run: |
-        openssl s_client -connect :443 2>/dev/null </dev/null |  sed -ne '/-BEGIN CERTIFICATE-/,/-END CERTIFICATE-/p' >  /tmp/hermes.local.crt
+        kubectl -n $HELM_NAMESPACE get secret hermes-tls -o jsonpath="{.data['tls\.crt']}" | base64 -d > /tmp/hermes.local.tls.crt
         kubectl -n $HELM_NAMESPACE get secret hermes-root-ca-secret -o jsonpath="{.data['ca\.crt']}" | base64 -d > /tmp/hermes.local.ca.crt
         sudo mv /tmp/*.crt /usr/local/share/ca-certificates/
         sudo update-ca-certificates
