--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -235,9 +235,11 @@ jobs:
       timeout-minutes: 15
       run: |
         sudo snap install microk8s --classic --channel=1.23/stable
-        sudo microk8s enable dns storage registry rbac ingress
+        sudo microk8s enable dns storage rbac ingress
         sudo microk8s status --wait-ready
         sudo microk8s kubectl rollout status deployment/hostpath-provisioner -n kube-system
+        sudo microk8s enable registry
+        sudo microk8s status --wait-ready
         sudo microk8s kubectl rollout status deployment/registry -n container-registry
     - name: Set Kube Config
       run: |
