#6 switch to regular mongodb

--- a/helm/hermes/envs/dev.yaml
+++ b/helm/hermes/envs/dev.yaml
@@ -18,7 +18,8 @@ kafka:
     kubernetes.io/arch: amd64
   zookeeper:
     replicaCount: 1
-    kubernetes.io/arch: amd64
+    nodeSelector:
+      kubernetes.io/arch: amd64
 mongodb:
   arbiter:
     nodeSelector:
