--- a/helm/hermes/Chart.yaml
+++ b/helm/hermes/Chart.yaml
@@ -6,17 +6,17 @@ version: 0.1.0
 appVersion: "0.1.0"
 dependencies:
   - name: kafka
-    version: "14.8.1"
+    version: "15.1.0"
     repository: https://charts.bitnami.com/bitnami
     condition: kafka.enabled
     alias: kafka
   - name: redis-cluster
-    version: "7.1.3"
+    version: "7.2.1"
     repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
     alias: redis
-  - name: mongodb-sharded
-    version: "3.11.2"
+  - name: mongodb
+    version: "11.0.3"
     repository: https://charts.bitnami.com/bitnami
     condition: mongodb.enabled
     alias: mongodb
