--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -41,20 +41,23 @@ tolerations: []
 affinity: {}
 kafka:
   enabled: true
-  replicaCount: 5
-  defaultReplicationFactor: 3
-  offsetsTopicReplicationFactor: 3
-  transactionStateLogReplicationFactor: 3
+  replicaCount: 1
+  defaultReplicationFactor: 1
+  offsetsTopicReplicationFactor: 1
+  transactionStateLogReplicationFactor: 1
   heapOpts: "-Xmx256m -Xms256m"
   zookeeper:
-    replicaCount: 3
+    replicaCount: 1
     heapSize: 256
 redis:
   enabled: true
-  existingSecret: "hermes-internal-redis"
-  existingSecretPasswordKey: "redisPassword"
+  architecture: "standalone"
+  auth:
+    existingSecret: "hermes-internal-redis"
+    existingSecretPasswordKey: "redisPassword"
 mongodb:
   enabled: true
-  existingSecret: "hermes-internal-mongodb"
+  auth:
+    existingSecret: "hermes-internal-mongodb"
 certmanager:
   enabled: true
