--- a/package.json
+++ b/package.json
@@ -4,21 +4,29 @@
   "description": "Collects and receives data which is ingested to a processing pipeline which normalizes to prep for watch evaluations, watches trigger alerts",
   "main": "build/monoApp.ts",
   "scripts": {
-    "test": "jest --coverage",
-    "build": "node_modules/typescript/bin/tsc --project ./",
-    "start": "node build/src/monoApp.js",
-    "start:dev": "nodemon",
+    "test": "jest --coverage --testPathPattern='tests/.*\\.spec\\.ts' --testPathIgnorePatterns='tests/.*\\.rest\\.spec\\.ts'",
+    "build": "node_modules/typescript/bin/tsc --project ./ && cp src/config/*.json build/src/config/",
+    "docker:build": "docker build -t ghcr.io/bryopsida/hermes-mono:local .",
+    "docker:push": "docker push ghcr.io/bryopsida/hermes-mono:local",
+    "start": "NODE_CONFIG_DIR=./build/src/config node build/src/monoApp.js",
+    "start:dev": "NODE_CONFIG_DIR=./src/config nodemon",
     "start:services": "docker-compose -f docker-compose.yml up -d",
     "stop:services": "docker-compose -f docker-compose.yml down",
     "lint": "eslint --ext .ts src/",
     "lint:fix": "eslint --ext .ts src/ --fix",
     "k8s:createPullSecret": "kubectl --namespace $npm_config_helm_namespace create secret docker-registry ghcr-credentials  --docker-server=ghcr.io --docker-username=$npm_config_registry_username --docker-password=$npm_config_registry_password",
     "k8s:createNamespace": "kubectl create namespace $npm_config_helm_namespace",
+    "helm:addRepos": "helm repo add jetstack https://charts.jetstack.io",
+    "helm:updateRepos": "helm repo update",
+    "helm:deployCertManager": "helm upgrade --install --namespace cert-manager --create-namespace cert-manager jetstack/cert-manager --set installCRDs=true --debug --wait",
     "helm:deploy": "helm --namespace $npm_config_helm_namespace upgrade --install hermes ./helm/hermes --debug --wait $npm_config_helm_args",
     "helm:test": "helm test hermes",
     "helm:delete": "helm delete hermes",
     "helm:lint": "helm lint ./helm/hermes",
-    "test:e2e": "echo 'todo'"
+    "minikube:start": "minikube start --cpus=4 --memory=8192 --disk-size=40G",
+    "minikube:stop": "minikube stop",
+    "minikube:delete": "minikube delete",
+    "test:e2e": "jest --testPathPattern='tests/.*\\.rest\\.spec\\.ts'"
   },
   "repository": {
     "type": "git",
@@ -32,20 +40,20 @@
   "homepage": "https://github.com/bryopsida/hermes#readme",
   "dependencies": {
     "@bull-board/fastify": "^3.9.0",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "bull": "^4.1.1",
-    "fastify-helmet": "^6.0.0",
+    "config": "^3.3.7",
     "fastify": "^3.24.0",
-
-    "knex": "^0.95.14",
+    "fastify-helmet": "^5.3.2",
     "librdkafka": "^0.0.0",
+    "mongoose": "^6.1.5",
     "node-rdkafka": "^2.12.0",
-    "pg": "^8.7.1",
     "pino": "^7.6.3",
     "pino-pretty": "^7.2.0"
   },
   "devDependencies": {
     "@types/bull": "^3.15.6",
+    "@types/config": "^0.0.40",
     "@types/jest": "^27.4.0",
     "@types/node": "^17.0.8",
     "@typescript-eslint/eslint-plugin": "^5.9.1",
