--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,21 +20,39 @@ jobs:
       actions: read
       contents: read
       security-events: write
-    strategy:
-      fail-fast: false
-      matrix:
-        language: [ 'javascript' ]
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v1
       with:
-        languages: ${{ matrix.language }}
+        languages: javascript
     - name: Autobuild
       uses: github/codeql-action/autobuild@v1
     - name: Perform CodeQL Analysis
       uses: github/codeql-action/analyze@v1
+  smoke-test:
+    name: "Smoke Test"
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Setup Docker buildx
+      timeout-minutes: 4
+      uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
+    - name: Run Smoke Tests
+      id: build
+      timeout-minutes: 25
+      uses: docker/build-push-action@a66e35b9cbcf4ad0ea91ffcaf7bbad63ad9e0229
+      with:
+        context: .
+        file: smoke-test.Dockerfile
+        load: false
+        push: false
+        tags: "smoke-test"
+        labels: "smoke-test"
+        cache-from: type=gha
+        cache-to: type=gha,mode=max
   build-container:
     name: "Build Container"
     runs-on: ubuntu-latest
@@ -58,7 +76,7 @@ jobs:
       - name: Setup Docker buildx
         timeout-minutes: 4
         uses: docker/setup-buildx-action@79abd3f86f79a9d68a23c75a09a9a85889262adf
-      - name: Log into registry ${{ env.REGISTRY }}
+      - name: Log into registry
         if: github.event_name != 'pull_request'
         timeout-minutes: 5
         uses: docker/login-action@42d299face0c5c43a0487c477f595ac9cf22f1a7
@@ -109,13 +127,6 @@ jobs:
           mkdir -p /tmp/artifacts
           docker save ${{ steps.meta.outputs.tags }} -o /tmp/artifacts/image.tar
           gzip -c /tmp/artifacts/image.tar > /tmp/artifacts/image.tar.gz
-      - name: Anti Virus Scan
-        timeout-minutes: 10
-        run: |
-          sudo apt-get install clamav clamav-daemon -y
-          sudo systemctl stop clamav-freshclam
-          sudo freshclam
-          clamscan --max-filesize=500M --max-scansize=500M /tmp/artifacts/image.tar.gz
       - name: Push image
         if: github.event_name != 'pull_request'
         id: push
@@ -185,13 +196,25 @@ jobs:
           sarif_file: kubesec-results.sarif
   test-deploy:
     name: "Test Deploy"
-    needs: [ build-container, helm-lint, kube-scan, analyze ]
+    needs: [ build-container, smoke-test, helm-lint, kube-scan, analyze ]
     runs-on: ubuntu-latest
     env: 
       HELM_NAMESPACE: "hermes"
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
+    - uses: actions/setup-node@v2
+      with:
+        node-version: '17'
+    - name: NPM Cache
+      uses: actions/cache@v2
+      with:
+        path: ~/.npm
+        key: ${{ runner.os }}-node-${{ hashFiles('package-lock.json') }}
+        restore-keys: |
+          ${{ runner.os }}-node-
+    - name: NPM install
+      run: npm ci
     - name: Download Container TAR
       if: ${{ github.event_name == 'pull_request' }}
       timeout-minutes: 4
@@ -211,10 +234,12 @@ jobs:
     - name: Create MicroK8S Cluster
       timeout-minutes: 15
       run: |
-        sudo snap install microk8s --classic --channel=1.23/stable
-        sudo microk8s enable dns storage registry rbac
+        sudo snap install microk8s --classic --channel=1.22/stable
+        sudo microk8s enable dns storage rbac ingress
         sudo microk8s status --wait-ready
         sudo microk8s kubectl rollout status deployment/hostpath-provisioner -n kube-system
+        sudo microk8s enable registry
+        sudo microk8s status --wait-ready
         sudo microk8s kubectl rollout status deployment/registry -n container-registry
     - name: Set Kube Config
       run: |
@@ -222,6 +247,16 @@ jobs:
         sudo microk8s config > ~/.kube/config
     - name: Test Kube Access
       run: kubectl get nodes
+    - name: Deploy Cert Manager
+      timeout-minutes: 10
+      run: |
+        npm run helm:addRepos
+        npm run helm:updateRepos
+        npm run helm:deployCertManager
+    - name: Set hermes.local /etc/hosts rule
+      run: |
+        export NODE_IP=$(kubectl get nodes -o json | jq -r '.items[].status.addresses[] | select(.type=="InternalIP") | .address ' | head -n 1)
+        sudo node scripts/setEtcHosts.js hermes.local $NODE_IP
     - name: Create Namespace
       run: npm run k8s:createNamespace --helm_namespace=$HELM_NAMESPACE
     - name: Create Pull Secret
@@ -238,8 +273,18 @@ jobs:
     - name: Test Deployment
       timeout-minutes: 5
       run: npm run helm:test
+    - name: Trust Deployment Self Signed Certificate
+      run: |
+        kubectl -n $HELM_NAMESPACE get secret hermes-tls -o jsonpath="{.data['tls\.crt']}" | base64 -d > /tmp/hermes.local.tls.crt
+        kubectl -n $HELM_NAMESPACE get secret hermes-root-ca-secret -o jsonpath="{.data['ca\.crt']}" | base64 -d > /tmp/hermes.local.ca.crt
+        sudo mv /tmp/*.crt /usr/local/share/ca-certificates/
+        sudo update-ca-certificates
     - name: E2E Tests
       timeout-minutes: 10
+      env:
+        TEST_PROTO: "http"
+        TEST_HOST: "hermes.local"
+        TEST_PORT: "80"
       run: npm run test:e2e
     - name: Collect Info On Failure
       if: failure()
@@ -250,6 +295,8 @@ jobs:
         kubectl -n $HELM_NAMESPACE describe statefulsets > /tmp/microk8s-hermes/hermes.statefulsets.describe
         kubectl -n $HELM_NAMESPACE describe replicasets > /tmp/microk8s-hermes/hermes.replicasets.describe
         kubectl -n $HELM_NAMESPACE describe deployments > /tmp/microk8s-hermes/hermes.deployments.describe
+        kubectl -n $HELM_NAMESPACE describe configmaps > /tmp/microk8s-hermes/hermes.configmaps.describe
+        kubectl -n $HELM_NAMESPACE describe secrets > /tmp/microk8s-hermes/hermes.secrets.describe
         inspectTarball=$(sudo microk8s inspect | grep -Po "/var/snap/microk8s/.*\.tar\.gz")
         sudo cp $inspectTarball /tmp/microk8s-hermes/
     - name: Upload Info On Failure
@@ -259,11 +306,44 @@ jobs:
         name: test-deploy-logs
         path: /tmp/microk8s-hermes/
         retention-days: 1
+  virus-scan:
+    name: "Virus Scan"
+    needs: [ build-container ]
+    runs-on: ubuntu-latest
+    steps:
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Download Tarball
+      if: ${{ github.event_name == 'pull_request' }}
+      timeout-minutes: 4
+      uses: actions/download-artifact@v2
+      with:
+        path: /tmp/artifacts/
+        name: image.tar.gz
+    - name: Login to registry
+      if: ${{ github.event_name != 'pull_request' }}
+      uses: docker/login-action@42d299face0c5c43a0487c477f595ac9cf22f1a7
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
+    - name: Export Container Image
+      if: ${{ github.event_name != 'pull_request' }}
+      timeout-minutes: 4
+      run: |
+        docker save ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ needs.build-container.outputs.version }} > /tmp/artifacts/image.tar.gz
+    - name: Anti Virus Scan
+      timeout-minutes: 10
+      run: |
+        sudo apt-get update && sudo apt-get install clamav clamav-daemon -y
+        sudo systemctl stop clamav-freshclam
+        sudo freshclam
+        clamscan --max-filesize=500M --max-scansize=500M /tmp/artifacts/image.tar.gz
   # TODO: Add publish helm chart and generate docs here
   deploy:
     if: ${{ github.event_name != 'pull_request' && github.ref == 'refs/heads/main' }}
     name: "Deploy to Lab"
-    needs: [ test-deploy ]
+    needs: [ test-deploy, virus-scan ]
     runs-on: ubuntu-latest
     environment: lab
     env: 
