--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -39,7 +39,20 @@
           "run-script", "start:dev"
       ],
       "env": {
-        "USE_CLUSTERING": "true"
+        "USE_CLUSTERING": "true",
+        "NODE_CONFIG_DIR": "${workspaceFolder}/src/config"
+      }
+    },
+    {
+      "type": "node",
+      "name": "Launch Nodemon Hermes (Mono) (Dev Pod)",
+      "console": "integratedTerminal",
+      "runtimeExecutable": "npm",
+      "runtimeArgs": [
+          "run-script", "start:dev"
+      ],
+      "env": {
+        "USE_CLUSTERING": "true",
       }
     }
   ]
