--- a/helm/hermes/Chart.yaml
+++ b/helm/hermes/Chart.yaml
@@ -5,23 +5,18 @@ type: application
 version: 0.1.0
 appVersion: "0.1.0"
 dependencies:
-  - name: elasticsearch
-    version: "17.5.5"
-    repository: https://charts.bitnami.com/bitnami
-    condition: elastic.enabled
-    alias: elastic
   - name: kafka
-    version: "14.8.1"
+    version: "14.9.3"
     repository: https://charts.bitnami.com/bitnami
     condition: kafka.enabled
     alias: kafka
-  - name: redis-cluster
-    version: "7.0.15"
+  - name: redis
+    version: "16.4.0"
     repository: https://charts.bitnami.com/bitnami
     condition: redis.enabled
     alias: redis
-  - name: postgresql-ha
-    version: "8.1.3"
+  - name: mongodb
+    version: "11.0.3"
     repository: https://charts.bitnami.com/bitnami
-    condition: postgres.enabled
-    alias: postgres
+    condition: mongodb.enabled
+    alias: mongodb
