--- a/helm/hermes/templates/ingress.yaml
+++ b/helm/hermes/templates/ingress.yaml
@@ -33,7 +33,7 @@ spec:
         {{- range .hosts }}
         - {{ . | quote }}
         {{- end }}
-      secretName: {{ .secretName }}
+      secretName: {{ $.Release.Name }}-tls
     {{- end }}
   {{- end }}
   rules:
