--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,6 +113,7 @@ jobs:
         with:
           image: ${{ steps.meta.outputs.tags }}
           fail-build: false
+          severity-cutoff: "critical"
           acs-report-enable: true
       - name: Upload Anchore scan SARIF report
         if: ${{ env.CODEQL_ENABLED }}
