--- a/helm/hermes/envs/lab.yaml
+++ b/helm/hermes/envs/lab.yaml
@@ -10,11 +10,17 @@ ingress:
       hosts:
         - lab.hermes.local
 kafka:
+  volumePermissions:
+    enabled: true
   nodeSelector:
     kubernetes.io/arch: amd64
   zookeeper:
     kubernetes.io/arch: amd64
 mongodb:
+  volumePermissions:
+    enabled: true
+  nodeSelector:
+    kubernetes.io/arch: amd64
   arbiter:
     nodeSelector:
       kubernetes.io/arch: amd64
@@ -29,9 +35,10 @@ mongodb:
     nodeSelector:
       kubernetes.io/arch: amd64
 redis:
+  volumePermissions:
+    enabled: true
+  nodeSelector:
+    kubernetes.io/arch: amd64
   updateJob:
-    nodeSelector:
-      kubernetes.io/arch: amd64
-  redis:
     nodeSelector:
       kubernetes.io/arch: amd64
