--- a/helm/hermes/values.yaml
+++ b/helm/hermes/values.yaml
@@ -1,7 +1,7 @@
 replicaCount: 1
 image:
   repository: ghcr.io/bryopsida/hermes-mono
-  pullPolicy: IfNotPresent
+  pullPolicy: Always
   tag: "main"
 imagePullSecrets: 
   - name: ghcr-credentials
