--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -110,13 +110,15 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
           cache-to: type=gha,mode=max
+      - name: Get Short SHA
+        id: short-sha
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
       - name: Scan image
         id: scan
         uses: anchore/scan-action@v3
         with:
-          image: ${{ steps.meta.outputs.tags }}
+          image: ${{ steps.vars.outputs.sha_short }}
           fail-build: false
-          severity-cutoff: "critical"
           acs-report-enable: true
       - name: Upload Anchore scan SARIF report
         if: ${{ env.CODEQL_ENABLED }}
